<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/roadtripFragment"
            android:icon="@drawable/ic_menu_roadtrip"
            android:title="@string/action_roadtrip" />
        <item
            android:id="@+id/roadtripListFragment"
            android:icon="@drawable/ic_menu_roadtrip_list"
            android:title="@string/action_roadtrip_list" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_menu_aboutus"
            android:title="@string/action_about" />
    </group>
    <item android:title="Access Control">
        <menu>
            <item
                android:id="@+id/signout"
                android:icon="@android:drawable/ic_menu_revert"
                android:onClick="signOut"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>
