<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/roadtripListFragment">

    <fragment
        android:id="@+id/roadtripFragment"
        android:name="org.wit.tripshare.ui.roadtrip.RoadtripFragment"
        android:label="@string/action_roadtrip"
        tools:layout="@layout/fragment_roadtrip" >
        <action
            android:id="@+id/action_roadtripFragment_to_roadtripListFragment"
            app:destination="@id/roadtripListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/roadtripListFragment"
        android:name="org.wit.tripshare.ui.roadtriplist.RoadtripListFragment"
        android:label="@string/action_roadtrip_list"
        tools:layout="@layout/fragment_roadtrip_list" >
        <action
            android:id="@+id/action_roadtripListFragment_to_roadtripFragment"
            app:destination="@id/roadtripFragment"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_roadtripListFragment_to_roadtripDetailFragment"
            app:destination="@id/roadtripDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="org.wit.tripshare.ui.about.AboutFragment"
        android:label="@string/action_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/roadtripDetailFragment"
        android:name="org.wit.tripshare.ui.detail.RoadtripDetailFragment"
        android:label="Roadtrip Detail"
        tools:layout="@layout/fragment_roadtrip_detail" >
        <action
            android:id="@+id/action_roadtripDetailFragment_to_roadtripListFragment"
            app:destination="@id/roadtripListFragment" />
        <argument
            android:name="roadtripid"
            app:argType="string" />
    </fragment>
</navigation>