<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.tripshare.views.roadtrip.RoadtripView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/roadtripTitle"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_roadtripTitle"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/roadtripDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_roadtripDescription"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/roadtripHighlights"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_roadtripHighlights"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/roadtripLowlights"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_roadtripLowlights"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/roadtripDates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textAlignment="center"
                    android:text="@string/hint_roadtripDates"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="Click to add dates on the road"/>


<!--                <androidx.appcompat.widget.AppCompatEditText-->
<!--                    android:id="@+id/roadtripEndDate"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="8dp"-->
<!--                    android:hint="@string/hint_roadtripEndDate"-->
<!--                    android:inputType="text"-->
<!--                    android:maxLength="25"-->
<!--                    android:maxLines="1"-->
<!--                    android:padding="8dp"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="14sp" />-->

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/roadtripRatingBarInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:numStars="5"
                    android:progressTint="@color/duskYellow"
                    android:rating="0"
                    android:stepSize="0.5" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/submitRoadtripRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/white"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_submitRoadtripRating"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/chooseRoadtripImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorPrimary"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_addRoadtripImage"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/roadtripImage"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_road_trip" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRoadtripAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorPrimary"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addRoadtrip"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>